Improved file structure, added logos and the search bar component

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+/* primary-color: #536DFE */
+/* secondary-color: #6A3DE8 */
+/* primary-color: #FFFFFF */
