Minor styling improvements

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F1F3F5;
 }
 
 
